[WAL-8245] Fix dark mode issues

--- a/src/marketplace/details/plan/PlanDetailTable2.scss
+++ b/src/marketplace/details/plan/PlanDetailTable2.scss
@@ -10,7 +10,7 @@
       color: var(--bs-gray-700);
     }
     .description {
-      color: var(--bs-grey-600);
+      color: var(--bs-gray-600);
     }
     .value {
       color: var(--bs-grey-500);
