--- a/src/metronic/sass/layout/aside/_menu.scss
+++ b/src/metronic/sass/layout/aside/_menu.scss
@@ -58,7 +58,7 @@
 
 // Dark aside colors
 $dark-title: $gray-800;
-$dark-icon: $grey-600;
+$dark-icon: $gray-600;
 $dark-arrow: $gray-600;
 $dark-arrow-state: $gray-800;
 $dark-bg-hover: $gray-50;
